# ztf

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OSS_SPEC.md  README.md  SECURITY.md
.agent/skills/commit/: SKILL.md
.agent/skills/maintenance/: SKILL.md
.agent/skills/sync-oss-spec/: .last-updated  SKILL.md
.agent/skills/update-docs/: SKILL.md
.agent/skills/update-manpages/: SKILL.md
.agent/skills/update-readme/: SKILL.md
.agent/skills/update-website/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  version-bump.yml
agent-help/: debug.md  help.md
docs/: architecture.md  configuration.md  getting-started.md  troubleshooting.md
examples/: greet.toml
examples/greet/: README.md  ztf.toml
man/: commands.md  docs.md  main.md  man.md  run.md
prompts/: README.md
prompts/agent-review/: 1_0_0.md
scripts/: changelog-guard.sh  generate-changelog.sh  release.sh  sync-releases.sh  update-versions.sh
src/: agent.rs  assertions.rs  cli.rs  config.rs  discoverability.rs  lib.rs  main.rs  output.rs  report.rs  runner.rs  shell.rs
tests/: assertions_test.rs  cli_test.rs  config_test.rs  discoverability_test.rs  runner_test.rs  shell_test.rs
website/: index.html  package.json  vite.config.mjs
website/public/: CNAME  robots.txt  sitemap.xml
website/scripts/: extract-source-data.mjs  render-route-heads.mjs
website/src/: App.css  App.tsx  main.js  styles.css
website/src/components/: Assertions.tsx  CopyButton.tsx  DocsLinks.tsx  Documentation.tsx  Examples.tsx  Features.tsx  Footer.tsx  Hero.tsx  Install.tsx  LandingPage.tsx  Manual.tsx  MarkdownRenderer.tsx  Navbar.tsx  Platforms.tsx  ScenarioAnatomy.tsx  SidebarLayout.tsx  TomlBlock.tsx
website/src/seo/: siteConfig.js  siteConfig.ts
