[package]
name = "ztf"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A Rust CLI for agent-assisted end-to-end testing using TOML scenario files with arrange/act/assert stages and AI-powered final verification."
repository = "https://github.com/niclaslindstedt/ztf"
readme = "README.md"

[[bin]]
name = "ztf"
path = "src/main.rs"

[lib]
name = "ztf"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
toml = "1.1"
zag-agent = "0.13"
