[package]
name = "ztf"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A Rust CLI for agent-assisted end-to-end testing using TOML scenario files with arrange/act/assert stages and AI-powered final verification."
repository = "https://github.com/niclaslindstedt/ztf"
homepage = "https://ztf.niclaslindstedt.se"
documentation = "https://ztf.niclaslindstedt.se/docs"
readme = "README.md"
keywords = ["testing", "e2e", "cli", "agent", "toml"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "ztf"
path = "src/main.rs"

[lib]
name = "ztf"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
toml = "0.8"
zag-agent = "0.13"
